[tool.poetry]
name = "homework-9"
version = "0.1.0"
description = ""
authors = ["Nyambevos <ruslan.bilokoniuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
